@@ -1,5 +1,11 @@
 2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/TreeView_Detail.h,
+	  src/TreeView_Detail.cc: support showing of warning icon even when a
+	  partition is mounted.
+
+2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/Win_GParted.cc: made message about max. primary partitions a bit
 	  more informative.
 
